# Epid.-Control-VMA

./: .gitattributes  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  DESIGN.md  EpidControl.spec  GEMINI.md  README.md  alembic.ini  conftest.py  errors.md  pyproject.toml  pyrightconfig.json  requirements-dev.txt  requirements.txt  skills-lock.json
Test_UI/: README.md  alembic.ini  pyproject.toml  requirements.txt
Test_UI/app/: config.py  main.py
Test_UI/app/application/: errors.py
Test_UI/app/application/dto/: __init__.py  auth_dto.py  emr_dto.py  exchange_dto.py  lab_dto.py  patient_dto.py  sanitary_dto.py
Test_UI/app/application/services/: analytics_service.py  auth_service.py  demo_seed.py  emr_service.py  exchange_service.py  form100_service.py  lab_service.py  patient_service.py  reference_service.py  reporting_service.py  sanitary_service.py
Test_UI/app/domain/calculations/: __init__.py  incidence.py  prevalence.py
Test_UI/app/domain/models/: __init__.py  form100.py
Test_UI/app/domain/rules/: __init__.py  validation.py
Test_UI/app/infrastructure/audit/: audit_logger.py
Test_UI/app/infrastructure/db/: engine.py  models_sqlalchemy.py  session.py
Test_UI/app/infrastructure/form100/: __init__.py  layout.py
Test_UI/app/infrastructure/security/: password_hash.py  sha256.py
Test_UI/app/ui/: first_run_dialog.py  login_dialog.py  main_window.py  style.py
Test_UI/app/ui/admin/: __init__.py  user_admin_view.py
Test_UI/app/ui/analytics/: analytics_view.py
Test_UI/app/ui/emz/: emz_form.py
Test_UI/app/ui/form100/: __init__.py  bodymap_widget.py  form100_bottom_widget.py  form100_flags_widget.py  form100_main_widget.py  form100_stub_widget.py  form100_view.py  form100_wizard.py  icon_select_widget.py  lesion_type_widget.py
Test_UI/app/ui/home/: home_view.py
Test_UI/app/ui/import_export/: import_export_view.py
Test_UI/app/ui/lab/: __init__.py  lab_sample_detail_dialog.py  (+1 more)
Test_UI/docs/: context.md  form100_guide.md
Test_UI/tests/: conftest.py
Test_UI/tests/integration/: test_exchange_reporting.py  test_legacy_migration.py  test_migration_scripts.py
Test_UI/tests/unit/: test_auth_service.py  test_domain_calculations.py  test_form100_service.py  test_patient_emr_lab_flow.py
(+494 files in other folders)
