[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "codex-emr-lab"
version = "0.1.0"
description = "Desktop EMR + microbiology app (PySide6 + SQLite)"
requires-python = ">=3.11"
dependencies = [
    "PySide6>=6.6",
    "SQLAlchemy>=2.0",
    "alembic>=1.13",
    "pydantic>=2.4,<3",
    "platformdirs>=3.0",
    "openpyxl>=3.1",
    "reportlab>=4.0",
    "pyqtgraph>=0.13",
    "matplotlib>=3.8",
    "argon2-cffi>=23.1",
    "bcrypt>=4.1",
]

[project.optional-dependencies]
dev = [
    "black>=23.9",
    "ruff>=0.1.5",
    "mypy>=1.7",
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "pre-commit>=3.5",
]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = ["venv", ".venv", "build", "dist"]

[tool.ruff.lint]
select = [
    "E",
    "F",
    "W",
    "I",
    "N",
    "UP",
    "B",
    "A",
    "C4",
    "DTZ",
    "PIE",
    "Q",
    "RET",
    "SIM",
    "TID",
]
ignore = ["A003", "E501"]  # allow fields named like builtins; E501 handled by formatter

[tool.ruff.lint.isort]
combine-as-imports = true
known-first-party = ["app"]

[tool.mypy]
python_version = "3.11"
strict = false
warn_unused_configs = true
ignore_missing_imports = true
plugins = ["sqlalchemy.ext.mypy.plugin"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -p no:tmpdir"
cache_dir = "pytest_cache_local"
