[project]
name = "episafe"
version = "0.1.0"
description = "EpiSafe desktop app"
requires-python = ">=3.11"
dependencies = [
    "PySide6>=6.5",
    "SQLAlchemy>=2.0",
    "platformdirs>=4.0",
    "pydantic>=2.7",
    "alembic>=1.13",
    "openpyxl>=3.1",
    "reportlab>=4.2",
    "pyqtgraph>=0.13",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.mypy]
python_version = "3.11"
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true
check_untyped_defs = true
disallow_untyped_defs = false
ignore_missing_imports = true

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
